src/autocomplete/autocomplete.scss
// Stacked label (default)
.autocomplete-label-stacked {
  display: block;
}

// Inline label (non-default)
.autocomplete-label-inline {
  display: inline;

  @media (max-width: $width-sm) {
    display: block;
  }
}

// Wrapper for the input and result elements to ensure alignment
.autocomplete-body {
  position: relative;
}

// Embedded icon
.autocomplete-embedded-icon {
  position: absolute;
  left: 0;
}

// A pop up list of items used to show autocompleted results
.autocomplete-results {
  position: absolute;
  left: 0;
  z-index: 99;
  width: max-content;
  min-width: 100%;
  max-height: 20em;
  overflow-y: auto;
  // stylelint-disable-next-line primer/typography
  font-size: 13px;
  list-style: none;
  background: var(--color-canvas-overlay);
  border: $border-width $border-style var(--color-border-default);
  border-radius: $border-radius;
  box-shadow: var(--color-shadow-medium);
}

.autocomplete-results--embedded-icon {
  // to do: define
}

// One of the items that appears within an autocomplete group
// Bold black text on white background

.autocomplete-item {
  display: block;
  width: 100%;
  padding: $spacer-1 $spacer-2;
  overflow: hidden;
  font-weight: $font-weight-bold;
  color: var(--color-fg-default);
  text-align: left;
  text-decoration: none;
  text-overflow: ellipsis;
  white-space: nowrap;
  cursor: pointer;
  background-color: var(--color-canvas-overlay);
  border: 0;

  &:hover {
    color: var(--color-fg-on-emphasis);
    text-decoration: none;
    background-color: var(--color-accent-emphasis);

    // Inherit color on all child elements to ensure enough contrast
    * {
      color: inherit !important;
    }
  }

  &.selected,
  &[aria-selected='true'],
  &.navigation-focus {
    color: var(--color-fg-on-emphasis);
    text-decoration: none;
    background-color: var(--color-accent-emphasis);

    // Inherit color on all child elements to ensure enough contrast
    * {
      color: inherit !important;
    }
  }
}

